# ragask

./: .firebaserc  .gitignore  README.md  firebase.json  next.config.mjs  package-lock.json  package.json  tsconfig.json
.github/: server-deploy.yml
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  server-deploy.yml
app/: .gitignore
app/server/: pyproject.toml
app/server/api/: app.py  database.py
app/server/api/models/: user.py
app/server/api/routes/: files.py
app/server/src/: api.py  config.py  main.py
app/server/src/documents/: models.py  service.py  views.py
app/server/src/users/: service.py
app/server/src/vectors/: models.py
app/web/: next.config.mjs  package-lock.json  package.json
app/web/src/: auth.ts
experiments/: env_config.py  making-rag-better.ipynb  pyproject.toml
server/: .env.sample  Dockerfile  README.md  deploy.sh  pyproject.toml
server/api/: api.py  app.py  app_logging.py  cloud.py  config.py  database.py  embeddings.py  main.py
server/api/controllers/: login.py
server/api/documents/: schemas.py  service.py  views.py
server/api/middlewares/: validate_jwt.py
server/api/models/: document_vectors.py  documents.py  files.py  users.py
server/api/routes/: api_v1.py  files.py  login.py  users.py
server/api/routes/api_v1_routes/: api_v1.py  files.py  users.py
server/api/routes/documents/: document_paths.py  documents.py  pdfs.py
server/api/users/: service.py
server/src/: app.py  database.py  embeddings.py  main.py
server/src/documents/: views.py
server/src/gcp/: service.py
server/src/users/: views.py
server/src/vectors/: models.py  schemas.py
src/app/: firebase.ts  layout.tsx  page.tsx
src/app/chat/: inputArea.tsx
src/components/: ChatMessage.tsx  MySendButton.tsx  MyTextArea.tsx  PdfTabs.tsx  chatWindow.tsx  documentList.tsx  pdf.tsx  sideNav.tsx
web/: package-lock.json  package.json  tsconfig.json
web/src/: auth.ts  session.d.ts
(+57 files in other folders)
